--- a/testFolder/test3.html
+++ b/testFolder/test3.html
@@ -8,7 +8,8 @@
 	<script src="angularMinified.js"></script>
 	<style>
 		body {
-			animation: changeColor 0.125s infinite;
+			/* mix-blend-mode: exclusion; */
+			animation: changeColor 5s infinite;
 			/* Change color every 5 seconds, repeat infinitely */
 		}
 
