--- a/prgm11.html
+++ b/prgm11.html
@@ -22,7 +22,7 @@
             {{name}}
         </li>
     </ul>
-    <!--Displaythestudentnamesinuppercaseusingfilters-->
+    <!--Display the student names in upper case using filters-->
     <h3>Names in Uppercase:</h3>
     <ul>
         <li ng-repeat="name in names">
